Closed Bug 29407 Opened 26 years ago Closed 26 years ago

[DOGFOOD] Cannot open additional browsing windows, Javascript error in the chrome.

Categories

(SeaMonkey :: General, defect, P3)

x86
Linux
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: jce2, Assigned: cbegle)

Details

This is Linux nightly build 2000022609 Attempting to open additional browsing windows through any method (including the New option under the file menu, or clicking on the browser icon at the bottom of the window, does not create a new browser window, instead it causes this javascript error: In OpenBrowserWindw()... JavaScript Error: TypeError: handler has no properties URL: chrome://global/content/tasksOverlay.js LineNo: 92 I looked at the code, and changed it so it did a getService call in one line. That didn't work either...I got THIS error: In OpenBrowserWindw()... JavaScript Error: TypeError: Components.classes['component://netscape/appshell/component/browser/cmdhandler'] has no properties URL: chrome://global/content/tasksOverlay.js LineNo: 91 So then I had a long chat with people in #mozilla: <jband> Jason: that progid is probably just not registered with the component manager <jband> lxr search for cmdhandler finds it in only navigator.js and tasksOverlays.js <jband> but no code that is claiming to implement that component that I can see <jband> So what *is* cmdhandler? <jband> but the problem is that you don't have a handle to a componet instance <JasonCEager> and why don't I have a handle to a component interface? <jband> you have a progid that the component manager does not know about <jband> no on registered that progid <jband> Jason: I have an old tree. cmdhandler used to be in nsIBrowserInstance.idl <jband> It is not there now. try component://netscape/commandlinehander/general-startup-browser it might be the same thing bruce> that's due to a change yesterday by sspitzer. <jband> Jason: the -r 1.8 version of nsIBrowserInstance.idl changed this name. bug sspitzer So I made my final attempt to fix the chrome, and now I get this error: In OpenBrowserWindw()... JavaScript Error: TypeError: Components.classes['component://netscape/commandlinehandler/general-startup-browser'] has no properties URL: chrome://global/content/tasksOverlay.js LineNo: 91 So someone has changed the name of a component but hasn't changed the name of the component in the chrome, and I have no idea what component needs to be called. So I'm going to have to drop back to 2000022209 until this gets fixed or someone tells me what the correct component name is. *sigh* I think this should be part of the smoke test for the build, don't you think? Lots and lots of people depend on multiple browsing windows. Making as a blocker for M 14..this SHOULD be an easy fix.
I *WANT* to assign this bug to sspitzer, but bugzilla doesn't seem to know him/her at all. :-( Also marked as blocker on M14 (which I thought i did in the first place).
Severity: normal → blocker
Target Milestone: M14
Shouldn't M14 be code-frozen now? http://mozilla.org/projects/seamonkey/milestones/progress-2-beta.html says it's due out in two days.
CC: seth
Blizzard's check in does not fix this problem. I looked at it in bonzi and manually applied it. 1) The javascript error still pops up in a global chrome file, not that navigator.js file that he patched. That may allow javascript to pop up a new version of a navigator, but it does not get called when a user attempts to manually open another navigator window. 2) I think the fix has a typo in it, unless the component is really called commandlineHANDER and not commandlineHANDLER. Is there a way to get a list of components? If there was, I could probably figure this out on my own.
Whiteboard: Fix that was supposed to fix this did NOT work.
This works in my build dated Feb 26 12:03, so whatever broke it was probably checked in some time after 11:00.
Actually, my checkin did fix the problem. The really funny thing is that it's misspelled in the .idl file, too. I just cut-n-pasted the component:// url. I didn't notice. Seth, can I fix this? It's in nsIBrowserInstance.idl and in two .js files. Look at the NS_BROWSERSTARTUPHANDLER_PROGID define.
Status: NEW → ASSIGNED
I misspelled it all over the place. http://lxr.mozilla.org/seamonkey/search?string=hander yes, please fix them all.
I fixed all the misspellings.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
clearing status whiteboard, blizzard has fixed it. marking verified
Status: RESOLVED → VERIFIED
Whiteboard: Fix that was supposed to fix this did NOT work.
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.