fix spelling of hander to handler.  bug #29407. r=sspitzer