editor/base/nsEditorRegistration.cpp
@@ -67,12 +67,12 @@ static nsModuleComponentInfo components[] = {
     { "Editor Service", NS_EDITORSERVICE_CID,
       "component://netscape/editor/editorservice", nsEditorServiceConstructor,},
     { "Editor Startup Handler", NS_EDITORSERVICE_CID,
-      "component://netscape/commandlinehander/general-startup-editor",
+      "component://netscape/commandlinehandler/general-startup-editor",
       nsEditorServiceConstructor,
       nsEditorService::RegisterProc,
       nsEditorService::UnregisterProc, },
     { "Edit Startup Handler", NS_EDITORSERVICE_CID,
-      "component://netscape/commandlinehander/general-startup-edit",
+      "component://netscape/commandlinehandler/general-startup-edit",
       nsEditorServiceConstructor, },
 };
 
