mailnews/base/build/nsMsgBaseCID.h
@@ -236,7 +236,7 @@
 #define NS_MESSENGERBOOTSTRAP_PROGID \
   "component://netscape/appshell/component/messenger"
 #define NS_MAILSTARTUPHANDLER_PROGID \
-  "component://netscape/commandlinehander/general-startup-mail"
+  "component://netscape/commandlinehandler/general-startup-mail"
 
 //
 // nsMessenger
