mailnews/news/build/nsMsgNewsCID.h
@@ -75,7 +75,7 @@
 #define NS_NNTPSERVICE_PROGID \
   "component://netscape/messenger/nntpservice"
 #define NS_NEWSSTARTUPHANDLER_PROGID \
-  "component://netscape/commandlinehander/general-startup-news"
+  "component://netscape/commandlinehandler/general-startup-news"
 
 #define NS_NNTPSERVICE_CID                              \
 { /* 4C9F90E1-E19B-11d2-806E-006008128C4E */  		\
